@@ -1,6 +1,11 @@
 = Changelog
 :toc:
 
+== master
+
+* Bug Fix: Update `opt.Dispatch` not to handle `--help` option.
+It was preventing the help option to reach the commands.
+
 == v0.15.0 Feature release
 
 As the releases before, this release has 100% test coverage.
